project(mdfmodel)

set (MgMdfModel_SRCS
    Common/Color.cpp
    Common/Extent3D.cpp
    Common/Point3D.cpp
    Common/Size2D.cpp
    Common/StringObject.cpp
    Common/Vector3D.cpp
    PrintLayout/DataConfiguration.cpp
    PrintLayout/MapView.cpp
    PrintLayout/MapViewportDefinition.cpp
    PrintLayout/PrintLayoutDefinition.cpp
    PrintLayout/PrintLayoutElement.cpp
    PrintLayout/PrintLayoutElementDefinition.cpp
    PrintLayout/PrintLayoutElementStyle.cpp
    PrintLayout/PropertyMapping.cpp
    PrintLayout/StylizationConfiguration.cpp
    PrintLayout/Thickness.cpp
    AreaRule.cpp
    AreaSymbolization2D.cpp
    AreaTypeStyle.cpp
    AreaUsage.cpp
    AttributeRelate.cpp
    BaseMapLayer.cpp
    BaseMapLayerGroup.cpp
    BlockSymbol.cpp
    Box2D.cpp
    CalculatedProperty.cpp
    ChannelBand.cpp
    CompositeRule.cpp
    CompositeSymbolization.cpp
    CompositeTypeStyle.cpp
    CompoundSymbolDefinition.cpp
    ConvertUTF.c
    DisplayScale.cpp
    DrawingLayerDefinition.cpp
    ElevationSettings.cpp
    Extension.cpp
    FeatureSource.cpp
    FeatureTypeStyle.cpp
    Fill.cpp
    FontSymbol.cpp
    GraphicElement.cpp
    GridColor.cpp
    GridColorRule.cpp
    GridColorStyle.cpp
    GridLayerDefinition.cpp
    GridScaleRange.cpp
    GridSurfaceStyle.cpp
    HillShade.cpp
    Image.cpp
    ImageSymbol.cpp
    Label.cpp
    LayerDefinition.cpp
    LengthConverter.cpp
    LineRule.cpp
    LineSymbolization2D.cpp
    LineTypeStyle.cpp
    LineUsage.cpp
    MapDefinition.cpp
    MapLayer.cpp
    MapLayerGroup.cpp
    MapLayerGroupCommon.cpp
    MarkSymbol.cpp
    MdfModel.cpp
    MdfRootObject.cpp
    NameStringPair.cpp
    Override.cpp
    Parameter.cpp
    Path.cpp
    PointRule.cpp
    PointSymbolization2D.cpp
    PointTypeStyle.cpp
    PointUsage.cpp
    ProfileRenderLabelsResult.cpp
    ProfileRenderLayerResult.cpp
    ProfileRenderLayersResult.cpp
    ProfileRenderLayersResultBase.cpp
    ProfileRenderMapResult.cpp
    ProfileRenderSelectionResult.cpp
    ProfileRenderWatermarkResult.cpp
    ProfileRenderWatermarksResult.cpp
    ProfileResult.cpp
    RelateProperty.cpp
    ResizeBox.cpp
    Rule.cpp
    ScaleRange.cpp
    SimpleSymbol.cpp
    SimpleSymbolDefinition.cpp
    Stroke.cpp
    SupplementalSpatialContextInfo.cpp
    Symbol.cpp
    SymbolDefinition.cpp
    SymbolInstance.cpp
    Symbolization.cpp
    Text.cpp
    TextFrame.cpp
    TextSymbol.cpp
    ThemeLabel.cpp
    TileSetDefinition.cpp
    TileSetSource.cpp
    TileStoreParameters.cpp
    TileWatermarkPosition.cpp
    UnicodeString.cpp
    URLData.cpp
    VectorLayerDefinition.cpp
    VectorScaleRange.cpp
    Version.cpp
    W2DSymbol.cpp
    WatermarkAppearance.cpp
    WatermarkDefinition.cpp
    WatermarkInstance.cpp
    WatermarkPosition.cpp
    WatermarkXOffset.cpp
    WatermarkYOffset.cpp
    XYWatermarkPosition.cpp
)

add_library(MgMdfModel${MG_VERSION_SUFFIX} SHARED ${MgMdfModel_SRCS})

install( TARGETS MgMdfModel${MG_VERSION_SUFFIX} DESTINATION ${LIB_INSTALL_DIR} COMPONENT ${MG_COMPONENT} )
install_symlink( ${CMAKE_INSTALL_PREFIX}/${LIB_INSTALL_DIR}/libMgMdfModel${MG_VERSION_SUFFIX}.so libMgMdfModel.so ${MG_COMPONENT} )