AUTOMAKE_OPTIONS = foreign

EXTRA_DIST = MdfModel.vcproj MdfModel.rc

lib_LTLIBRARIES = libMgMdfModel.la

libMgMdfModel_la_SOURCES = \
  Common/Color.cpp \
  Common/Extent3D.cpp \
  Common/Point3D.cpp \
  Common/Size2D.cpp \
  Common/StringObject.cpp \
  Common/Vector3D.cpp \
  PrintLayout/DataConfiguration.cpp \
  PrintLayout/MapView.cpp \
  PrintLayout/MapViewportDefinition.cpp \
  PrintLayout/PrintLayoutDefinition.cpp \
  PrintLayout/PrintLayoutElement.cpp \
  PrintLayout/PrintLayoutElementDefinition.cpp \
  PrintLayout/PrintLayoutElementStyle.cpp \
  PrintLayout/PropertyMapping.cpp \
  PrintLayout/StylizationConfiguration.cpp \
  PrintLayout/Thickness.cpp \
  AreaRule.cpp \
  AreaSymbolization2D.cpp \
  AreaTypeStyle.cpp \
  AreaUsage.cpp \
  AttributeRelate.cpp \
  BaseMapLayer.cpp \
  BaseMapLayerGroup.cpp \
  BlockSymbol.cpp \
  Box2D.cpp \
  CalculatedProperty.cpp \
  ChannelBand.cpp \
  CompositeRule.cpp \
  CompositeSymbolization.cpp \
  CompositeTypeStyle.cpp \
  CompoundSymbolDefinition.cpp \
  ConvertUTF.c \
  DisplayScale.cpp \
  DrawingLayerDefinition.cpp \
  ElevationSettings.cpp \
  Extension.cpp \
  FeatureSource.cpp \
  FeatureTypeStyle.cpp \
  Fill.cpp \
  FontSymbol.cpp \
  GraphicElement.cpp \
  GridColor.cpp \
  GridColorRule.cpp \
  GridColorStyle.cpp \
  GridLayerDefinition.cpp \
  GridScaleRange.cpp \
  GridSurfaceStyle.cpp \
  HillShade.cpp \
  Image.cpp \
  ImageSymbol.cpp \
  Label.cpp \
  LayerDefinition.cpp \
  LengthConverter.cpp \
  LineRule.cpp \
  LineSymbolization2D.cpp \
  LineTypeStyle.cpp \
  LineUsage.cpp \
  MapDefinition.cpp \
  MapLayer.cpp \
  MapLayerGroup.cpp \
  MapLayerGroupCommon.cpp \
  MarkSymbol.cpp \
  MdfModel.cpp \
  MdfRootObject.cpp \
  NameStringPair.cpp \
  Override.cpp \
  Parameter.cpp \
  Path.cpp \
  PointRule.cpp \
  PointSymbolization2D.cpp \
  PointTypeStyle.cpp \
  PointUsage.cpp \
  ProfileRenderLabelsResult.cpp \
  ProfileRenderLayerResult.cpp \
  ProfileRenderLayersResult.cpp \
  ProfileRenderLayersResultBase.cpp \
  ProfileRenderMapResult.cpp \
  ProfileRenderSelectionResult.cpp \
  ProfileRenderWatermarkResult.cpp \
  ProfileRenderWatermarksResult.cpp \
  ProfileResult.cpp \
  RelateProperty.cpp \
  ResizeBox.cpp \
  Rule.cpp \
  ScaleRange.cpp \
  SimpleSymbol.cpp \
  SimpleSymbolDefinition.cpp \
  Stroke.cpp \
  SupplementalSpatialContextInfo.cpp \
  Symbol.cpp \
  SymbolDefinition.cpp \
  SymbolInstance.cpp \
  Symbolization.cpp \
  Text.cpp \
  TextFrame.cpp \
  TextSymbol.cpp \
  ThemeLabel.cpp \
  TileWatermarkPosition.cpp \
  UnicodeString.cpp \
  URLData.cpp \
  VectorLayerDefinition.cpp \
  VectorScaleRange.cpp \
  Version.cpp \
  W2DSymbol.cpp \
  WatermarkAppearance.cpp \
  WatermarkDefinition.cpp \
  WatermarkInstance.cpp \
  WatermarkPosition.cpp \
  WatermarkXOffset.cpp \
  WatermarkYOffset.cpp \
  XYWatermarkPosition.cpp

noinst_HEADERS = \
  Common/Color.h \
  Common/Extent3D.h \
  Common/Point3D.h \
  Common/Size2D.h \
  Common/StringObject.h \
  Common/Vector3D.h \
  PrintLayout/DataConfiguration.h \
  PrintLayout/MapView.h \
  PrintLayout/MapViewportDefinition.h \
  PrintLayout/PrintLayoutDefinition.h \
  PrintLayout/PrintLayoutElement.h \
  PrintLayout/PrintLayoutElementDefinition.h \
  PrintLayout/PrintLayoutElementStyle.h \
  PrintLayout/PropertyMapping.h \
  PrintLayout/StylizationConfiguration.h \
  PrintLayout/Thickness.h \
  AreaRule.h \
  AreaSymbolization2D.h \
  AreaTypeStyle.h \
  AreaUsage.h \
  AttributeRelate.h \
  Base64.h \
  BaseMapLayer.h \
  BaseMapLayerGroup.h \
  BlockSymbol.h \
  Box2D.h \
  CalculatedProperty.h \
  ChannelBand.h \
  CompositeRule.h \
  CompositeSymbolization.h \
  CompositeTypeStyle.h \
  CompoundSymbolDefinition.h \
  ConvertUTF.h \
  DisplayScale.h \
  DrawingLayerDefinition.h \
  ElevationSettings.h \
  Extension.h \
  FeatureSource.h \
  FeatureTypeStyle.h \
  Fill.h \
  FontSymbol.h \
  GraphicElement.h \
  GridColor.h \
  GridColorRule.h \
  GridColorStyle.h \
  GridLayerDefinition.h \
  GridScaleRange.h \
  GridSurfaceStyle.h \
  HillShade.h \
  IFeatureTypeStyleVisitor.h \
  IGraphicElementVisitor.h \
  ISymbolDefinitionVisitor.h \
  ISymbolVisitor.h \
  ISymbolizationVisitor.h \
  Image.h \
  ImageSymbol.h \
  Label.h \
  LayerDefinition.h \
  LengthConverter.h \
  LineRule.h \
  LineSymbolization2D.h \
  LineTypeStyle.h \
  LineUsage.h \
  MapDefinition.h \
  MapLayer.h \
  MapLayerGroup.h \
  MapLayerGroupCommon.h \
  MarkSymbol.h \
  MdfModel.h \
  MdfOwnerCollection.h \
  MdfRootObject.h \
  NameStringPair.h \
  Override.h \
  Parameter.h \
  Path.h \
  PointRule.h \
  PointSymbolization2D.h \
  PointTypeStyle.h \
  PointUsage.h \
  ProfileRenderLabelsResult.h \
  ProfileRenderLayerResult.h \
  ProfileRenderLayersResult.h \
  ProfileRenderLayersResultBase.h \
  ProfileRenderMapResult.h \
  ProfileRenderSelectionResult.h \
  ProfileRenderWatermarkResult.h \
  ProfileRenderWatermarksResult.h \
  ProfileResult.h \
  RelateProperty.h \
  ResizeBox.h \
  Rule.h \
  ScaleRange.h \
  SimpleSymbol.h \
  SimpleSymbolDefinition.h \
  SizeContexts.h \
  Stroke.h \
  SupplementalSpatialContextInfo.h \
  Symbol.h \
  SymbolDefinition.h \
  SymbolInstance.h \
  Symbolization.h \
  Text.h \
  TextFrame.h \
  TextSymbol.h \
  ThemeLabel.h \
  TileWatermarkPosition.h \
  UnicodeString.h \
  URLData.h \
  VectorLayerDefinition.h \
  VectorScaleRange.h \
  Version.h \
  W2DSymbol.h \
  WatermarkAppearance.h \
  WatermarkDefinition.h \
  WatermarkInstance.h \
  WatermarkOffsetUnit.h \
  WatermarkPosition.h \
  WatermarkXOffset.h \
  WatermarkYOffset.h \
  XYWatermarkPosition.h \
  stdafx.h

libMgMdfModel_la_LDFLAGS = -release $(PACKAGE_VERSION)
